# scanrr

./: .dockerignore  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md
.github/workflows/: ci.yml  docker.yml
backend/: pyproject.toml
backend/scanrr/: cli.py  enums.py
backend/scanrr/api/: app.py
backend/scanrr/core/: clock.py  config.py  crypto.py  events.py  fileconfig.py  logging.py
backend/scanrr/db/: columns.py  database.py  engine.py  models.py
backend/scanrr/integrations/: arr.py  pushover.py
backend/scanrr/jobs/: discovery.py  queue.py  scheduler.py
backend/scanrr/scanning/: engine.py  executor.py  hashing.py  integrity.py  notifier.py  orchestrator.py  replacer.py  worker.py
backend/tests/: conftest.py  media_fixtures.py  specs.py  test_api.py  test_arr.py  test_engine.py  test_events.py  test_fileconfig.py  test_integrity.py  test_notifications.py  test_orchestrator.py  test_progress.py  test_replacements.py
deploy/: Dockerfile  README.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: ui.spec.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  ui.tsx  useEvents.ts
frontend/src/pages/: Dashboard.tsx  Detections.tsx  Integrations.tsx  Jobs.tsx  Replacements.tsx  RunDetail.tsx  Settings.tsx
