[project]
name = "scanrr"
version = "0.1.0"
description = "Scan a media library for corrupt video files using ffmpeg"
requires-python = ">=3.12"
dependencies = [
    "av>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanrr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_ffmpeg: test needs the ffmpeg CLI on PATH",
]
