[project]
name = "scanrr"
version = "0.1.0"
description = "Scan a media library for corrupt video files using ffmpeg"
requires-python = ">=3.12"
dependencies = [
    "av>=12.0",
    "blake3>=0.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "pebble>=5.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
scanrr = "scanrr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanrr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_ffmpeg: test needs the ffmpeg CLI on PATH",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends()/Header() in argument defaults is the intended idiom.
"scanrr/api/*" = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = []
